[package]
name = "prediction_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.16"
rand = "0.8"
rand_distr = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
ta = "0.5"
smartcore = "0.3"
ndarray = "0.15"

[dev-dependencies]
httpmock = "0.7"

