[package]
name = "prediction_sdk"
version = "0.1.5"
edition = "2024"
authors = ["Inferenco Team"]
description = "Advanced cryptocurrency forecasting SDK combining statistical models, machine learning (SVR), and technical analysis with intelligent caching and rate limiting"
license = "MIT"
repository = "https://github.com/your-org/Inferenco-predictions-SDK"
homepage = "https://github.com/your-org/Inferenco-predictions-SDK"
documentation = "https://docs.rs/prediction_sdk"
readme = "../README.md"
keywords = ["cryptocurrency", "forecasting", "prediction", "machine-learning", "technical-analysis"]
categories = ["finance", "algorithms", "science"]


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
governor = "0.6"
itertools = "0.12"
moka = { version = "0.12", features = ["future"] }
nonzero_ext = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.16"
rand = "0.8"
rand_distr = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
ta = "0.5"
smartcore = "0.3"
ndarray = "0.15"

[dev-dependencies]
httpmock = "0.7"

